# gSceneTS

./: .bumpversion.cfg  .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  __init__.py  app_config.json  bump_version.bat  changelog-commit.txt  commit_message.txt  config.py  custom_widgets.py  field_widget.py  gscene-module.bat  gscene.py  main.py  main_window.py  properties_window.py  properties_window.py.bak  pyproject.toml  region.py  requirements.txt  robot.py  run_tests.py  setup.py  start_position.py  styles.py  test.py  testXML.xml  wall.py
properties/: __init__.py  base_properties_widget.py  properties_manager.py  properties_window_adapter.py  region_properties_widget.py  robot_properties_widget.py  start_position_properties_widget.py  wall_properties_widget.py
properties/utils/: __init__.py  grid_snap_utils.py
scene/: __init__.py
scene/items/: __init__.py  base_item.py  region.py  robot.py  start_position.py  wall.py
scene/managers/: __init__.py  scene_manager.py
scripts/: bump_version.py  update_version.py
tests/: README.md  conftest.py  run_tests.py  test_coverage_plan.md  test_exceptions.py  test_field_widget.py  test_mouse_events.py  test_performance.py  test_region.py  test_robot.py  test_shortcuts.py  test_theme_switching.py  test_type_utils.py  test_ui_interactions.py  test_wall.py  test_xml_start_position.py
utils/: __init__.py  exceptions.py  geometry_utils.py  hover_highlight.py  logging_utils.py  signal_utils.py  type_utils.py  ui_utils.py  xml_handler.py
utils/keyboard_shortcuts/: __init__.py  (+3 more)
view_controllers/: zoom_controller.py
(+1 files in other folders)
