[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gSceneTS"
version = "0.2.9"
description = "Графический редактор сцены для TRIK Studio"
authors = [
    {name = "ilyashir", email = "ilya.shirokolobov@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.4.0",
    "PyQt6-Qt6>=6.4.0",
    "PyQt6-sip>=13.4.0",
    "pytest>=7.0.0",
    "pytest-qt==4.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools]
packages = ["utils"]
package-data = {"utils" = ["transparent_scrollbar/*.py"]}

# Зависимость transparent-scrollbar-pyqt указана в setup.py через dependency_links
